# apple-compress

./: .pre-commit-config.yaml  README.md  docs.md  pyproject.toml
.github/workflows/: pypi-build-publish.yml  pypi-publish.yml
apple_compress/: __init__.py  __main__.py  _lib.py  compress.py  errors.py  types.py
