[tool.poetry]
name = "apple-compress"
version = "0.2.3"
description = "Python bindings for Apple's libcompression."
authors = ["m1stadev <adamhamdi31@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
acompress = "apple_compress.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
loguru = "^0.7.2"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E722"]

[tool.ruff.format]
quote-style = "single"

[tool.poetry.urls]
"Documentation" = "https://github.com/m1stadev/apple-compress/wiki/API-Usage"
"Bug Tracker" = "https://github.com/m1stadev/apple-compress/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
